--- a/miniprogram/pages/detail/storedetail/storedetail.wxss
+++ b/miniprogram/pages/detail/storedetail/storedetail.wxss
@@ -10,7 +10,7 @@
     box-shadow: 4px 1px 1px #cccccc;
     margin: 8px;
     padding: 16px;
-    
+    position: relative;    
 }
 
 .tag {
@@ -120,7 +120,7 @@
 .operation-area{
     width: 100%;
     position: fixed;
-    bottom: 3px;
+    bottom: 0px;
     background: #ffffff;
     display: flex;
     flex-direction: row;
@@ -218,4 +218,30 @@ border: none;
   justify-content: center;
   display: flex;
   padding-top: 8px
+}
+.step-container{
+  position: relative;  
+  margin-bottom: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 10px;
+}
+.step-content{
+  color: white;
+  font-size: 14px;  
+  width: 200px;
+  height: 40px;
+  background: #69c3aa;
+  border: 1px solid #69c3aa;
+  border-radius: 5px;
+  margin-bottom: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center
+}
+.step-down-img{
+  width: 25px;
+  height: 25px;
 }
