--- a/miniprogram/pages/lesson/lesson.wxss
+++ b/miniprogram/pages/lesson/lesson.wxss
@@ -1,194 +1,202 @@
-.active_item_title{
-    padding: 15px;
-    background-color: #FFF;
-}
-.active_title_wrap {
-    text-align: center;
-    padding-bottom: 2px;
-    border-bottom: 1px solid #000;
-    width: 80px;
-    margin: 0 auto;
-}
-.active_title {
-    display: inline-block;
-    font-size: 14px;
-    padding: 0 10px;
-    padding-bottom: 5px;
-    border-bottom: 3px solid #000;
-    font-weight: 700;
-}
-.active_goods_name {
-    background-color: #FFF;
-    padding: 7px 10px;
-    font-size: 14px;
-    white-space:nowrap;
-    overflow:hidden;
-    text-overflow:ellipsis;
-}
-.active_item_infor {
-    background-color: #FFF;
-    font-size: 14px;
-    padding: 0 10px;
-    padding-bottom: 10px;
-}
-.active_new_price {
-    color: #FF0000;
-    float: right;
-    position: fixed;
-}
-.active_old_price {
-    font-size: 12px;
-    text-decoration: line-through;
-    margin-left: 5px;
-}
-.active_time {
-    float: right;
-    font-size: 12px;
-}
-.active_block {
-    margin-bottom: 10px;
-}
-.active_group_price {
-    font-size: 12px;
-    color: #FF0000;
-}
-
-.tab-nav{
-	height: 80rpx;
-	background: #fff;
-	border-bottom: 1rpx solid #ddd;
-	display: flex;
-	line-height: 79rpx;
-	position: relative;
-}
-
-.tab-nav text.active{
-	color: #f7982a;
-}
-
-.tab-line{
-	position: absolute;
-	left: 0;
-	bottom: -1rpx;
-	height: 4rpx;
-	background: #69c3aa;
-	transition: all 0.3s;
-  margin-bottom: 3px;
-}
-.tab-text{
+/* 条件选择器区域 */
+.choice-area{
+  position: relative;
   display: flex;
-  justify-content: center;
-  font-size: 15px;
-	color: #777;
+  flex-direction: row;
+  background: white
 }
 
-/**index.wxss**/
-page{
-	height: 100%;
-	background-color: #efeff4;
-}
-scroll-view{
-  height: 100%;
-}
-.swiper{
-  top: 0px;
-  width: 100%;
-  height: 240px;	
-}
-.swiper swiper{
-	height: 240px;
-}
-.slide-image{
-  width: 100%;
-}
-.mobi_title{
-	font-size: 15px;
-	color: #777;
-  line-height: 110%;
-  font-weight: normal;
-	width: 100%;
-  padding: 10px;
-  background-color: #f3f3f3;
+.choice-item{
   position: relative;
-}
-.mobi_icon{
-	padding: 0px 1.5px;
-  border-radius: 1.5px;
-  background-color: #ff7777;
-  position: relative;
-  margin-right: 5px;
-}
-/*list*/
-.list{
-	overflow: hidden;
-	width: 100%;
-	padding: 0 20px 0 0;
-	border-top: 1px solid #eeeeee;
-	background-color: #fff;
-  margin-bottom: 15px;
-}
-.list-img{
-  position: relative;
-	float: left;
-	width: 120px;
-}
-.list-img .video-img{
-	width: 120px;
-	height: 120px;
-}
-.list-detail{
-	position: absolute;
-  margin-top: 15px;
-  margin-left: 135px;
-  margin-right: 10px;
-}
-.list-title text{
-	word-break: break-all;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;
-  overflow: hidden;
-	font-size: 17px;
-  color: #333;
-	font-weight: bold;
-  line-height: 120%;
-}
-.list-tag view.state{
-    display: block;
-    font-size: 11px;
-    color: #81aaf7;
-    width: 50px;
-    padding: 2px;
-    border: 1px solid #93b9ff;
-    border-radius: 2px;
-    text-align: center;
-		float: left;
-    margin-top: 20px
-}
-.list-tag .join{
-	font-size: 13px;
-  line-height: 120%;
-  color: #bbb;
-  float: right;
-  display: block;
+  display: flex;
+  flex-grow: 1;
   justify-content: center;
-  margin: 20px 0 0 55px;
-  }
-.list-tag .list-num{
-	font-size: 16px;
-  color: #ff6666;
+  align-items: center;
+  padding-top: 5px;
+  height: 35px;
 }
-.list-info{
-	font-size: 13px;
-  color: #bbb;
-  line-height: 110%;
-  font-weight: normal;
-	margin-top: 30px;
+
+.choice-line{
+  height: 14px;
+  background: #69c3aa;
+  width: 1px;
+  position: absolute;
+  right: 1px;
 }
-.text-price{
-  color: #69c3aa;
-  font-size: 18px;
-  padding-top: 10px;
+
+.fenge-line{
+  width: 100%;
+  height: 1px;
+  background: #69c3aa;
   margin-top: 5px;
+}
+
+.picker-area{
+  height: 30px;
+  width: 100%;
+  position: relative;
+  display: flex;
+  align-content: center;
+  background: white
+}
+.picker{
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-content: center;
+} 
+.picker-text{
+  font-size: 14px;
+  color: #69c3aa;
+}
+.down-img{
+  width: 14px;
+  height: 14px;
+  margin-left: 5px;
+  margin-top: 3px
+}
+.picker-text-container{
+  position: relative;
+  display: flex;
+  flex-grow: 1
+}
+
+/* weekday区域 */
+.weekday-area{
+  margin-top: 5px;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center
+}
+
+.weekday-item{
+  position: relative;
+  display: flex;
+  flex-grow: 1;
+  font-size: 12px;
+  color: #69c3aa;
+  justify-content: center;
+  align-items: center;
+  height: 25px;
+  flex-direction: column;
+}
+
+.weekday-item-checked{
+  position: relative;
+  display: flex;
+  flex-grow: 1;
+  font-size: 12px;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  height: 25px;
+  background: #69c3aa;
+  transform: translateX(1/7);
+  border-radius: 10px;
+  flex-direction: column;
+}
+
+
+.fenge-line2{
+  height: 16px;
+  background: #69c3aa;
+  color: #69c3aa;
+  margin-left: 5px;
+  margin-right: 5px;
+  width: 3px;
+}
+.fenge-line2-area{
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  margin: 5px;
+
+}
+.picker-text-date{
+  font-size: 14px;
+  color: #69c3aa;
+  position: absolute;
+  display: flex;
+  right: 10px;
+}
+
+/* 列表区域 */
+.lesson-area{
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  height: 90px;
+  border-radius: 5px;
+  border: 1px solid #cef0e6;
+  align-items: center;
+}
+.lessonpic-container{
+  height: 80px;
+  width: 80px;
+  margin-left: 5px;
+}
+.lessonpic{
+  height: 100%;
+  width: 100%;
+  border-radius: 100%
+}
+.lessoninfo-detail{
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  margin-left: 20px;
+  flex-grow: 1;
+  height: 100%
+}
+.lessoninfo-container{
+  position: relative;
+  display: flex;
+  width: 80%;
+  flex-direction: column;
+}
+.lesson-button{
+  position: absolute;
+  display: flex;
+  right: 10px;
+  background: #69c3aa;
+  color: white;
+  width: 60px;
+  height: 40px;
+  border: 1px solid #69c3aa;
+  border-radius: 10px;
+  font-size: 18px;
+  justify-content: center;
+  align-items: center;
+}
+.lesson-name{
+  font-size: 20px;
+  color: #69c3aa;
+}
+.lesson-tag-text{
+  font-size: 14px;
+  color: gray;
+  margin-right: 10px
+}
+.lesson-tag{
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  margin-top: 10px;
+}
+.lesson-digit{
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  margin-top: 10px;
+}
+.lesson-digit-time{
+  font-size: 16px;
+  color: #69c3aa
+}
+.lesson-digit-price{
+  font-size: 16px;
+  margin-left: 10px;
+  color: red
 }
