--- a/miniprogram/pages/others/aboutus/aboutus.wxml
+++ b/miniprogram/pages/others/aboutus/aboutus.wxml
@@ -1,2 +1,1 @@
-<!--miniprogram/pages/others/aboutus/aboutus.wxml-->
-<text>miniprogram/pages/others/aboutus/aboutus.wxml</text>
+<textarea class="get-id" value="{{value}}"></textarea>
