--- a/miniprogram/pages/detail/storedetail/storedetail.wxml
+++ b/miniprogram/pages/detail/storedetail/storedetail.wxml
@@ -74,6 +74,21 @@
             </view>      
     </view>
 
+    <view class="frame">
+        <view class="tag">操作步骤</view>        
+          <view class='step-container'>
+            <view class='step-content'><text>步骤一</text></view>
+            <image src='../../../img/step-down.png' class='step-down-img'></image>
+            <view class='step-content'><text>步骤一</text></view>
+            <image src='../../../img/step-down.png' class='step-down-img'></image>
+            <view class='step-content'><text>步骤一</text></view>
+            <image src='../../../img/step-down.png' class='step-down-img'></image>
+            <view class='step-content'><text>步骤一</text></view>
+          </view>
+    </view>
+
+
+
 
     <view class='operation-area'>  
       <view class='buy-button' bindtap='makeAppointment'>
