--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -20,13 +20,17 @@ scroll-view{
 }
 .mobi_title{
 	font-size: 15px;
-	color: #777;
+	color: #69c3aa;
   line-height: 110%;
   font-weight: normal;
-	width: 100%;
-  padding: 10px;
+	width: 100%;  
+  height: 30px;
   background-color: #f3f3f3;
-  position: relative;
+  position: absolute;
+  top: 80%;
+  left: 30%;
+  display: flex;
+  flex-direction: row;
 }
 .mobi_icon{
 	padding: 0px 1.5px;
@@ -136,3 +140,37 @@ swiper {
     color: #777;
 }
 
+.picker{
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-content: center;
+} 
+
+.section{
+    margin-bottom: 40px;
+}
+
+.section__title{
+    margin-bottom: 8px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.picker-area{
+  height: 30px;
+  width: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  background: white
+}
+.down-img{
+  width: 14px;
+  height: 14px;
+  margin-left: 5px;
+}
+.picker-text{
+  font-size: 14px;
+  color: #69c3aa;
+}
