--- a/miniprogram/pages/others/aboutus/aboutus.wxss
+++ b/miniprogram/pages/others/aboutus/aboutus.wxss
@@ -1,1 +1,7 @@
-/* miniprogram/pages/others/aboutus/aboutus.wxss */
+.get-id{
+  width: 100%;
+  height: 100px;
+  margin: 10px;
+  border: 1px solid red;
+  font-size: 13px;
+}
